[gd_scene load_steps=3 format=3 uid="uid://ch52fr6lojmuk"]

[ext_resource type="Script" path="res://TCP_server_project/wrappers/client_wrapper.gd" id="1_1jwyg"]
[ext_resource type="PackedScene" uid="uid://bd1kyiefxpy52" path="res://TCP_server_project/client/tcp_client.tscn" id="1_l27vx"]

[node name="ClientWrapper" type="Node"]
script = ExtResource("1_1jwyg")

[node name="MainClient" parent="." instance=ExtResource("1_l27vx")]

[connection signal="accepted" from="MainClient" to="." method="_on_main_client_accepted"]
[connection signal="disconnected" from="MainClient" to="." method="_on_main_client_disconnected"]
[connection signal="payload_received" from="MainClient" to="." method="_on_main_client_payload_received"]
